# bare-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  package-lock.json  package.json
.cargo/: config.toml
examples/: basic.rs  hello-world-bare.js
src/: bindings.rs  build.rs  error.rs  lib.rs  main.rs
tests/: mod.rs
tests/common/: mod.rs
tests/errors/: mod.rs
tests/runtime/: mod.rs
