[package]
name = "bare-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "bare_rs"
path = "src/lib.rs"

[[bin]]
name = "bare-rs"
path = "src/main.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
libc = "0.2"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
bindgen = "0.71.1"
